# avantia-law-take-home

./: Dockerfile  README.md  pyproject.toml
src/: main.py
src/api/: api.py
src/db_helpers/: db_helpers.py
src/utils/: utils.py
tests/: test_main.py
